--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,393 @@
-/* No CSS *//*# sourceMappingURL=styles.css.map */
+.header-top {
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.schedule-wrapper {
+  margin-left: auto;
+  padding-right: 30px;
+}
+
+.address-wrapper {
+  padding-right: 30px;
+}
+
+.schedule {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.schedule span {
+  color: #707070;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.schedule span:first-child {
+  color: #000000;
+  font-family: "Segoe UI";
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.schedule span:first-child::before {
+  content: "";
+  display: inline-block;
+  background-image: url("../img/time-icon.svg");
+  background-repeat: no-repeat;
+  width: 15px;
+  height: 15px;
+  margin-right: 10px;
+}
+
+.address {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin: 0;
+}
+
+.address span {
+  color: #707070;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.address span:first-child {
+  color: #000000;
+  font-family: "Segoe UI";
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.address span:first-child::before {
+  content: "";
+  display: inline-block;
+  background-image: url("../img/address-icon.svg");
+  background-repeat: no-repeat;
+  width: 11px;
+  height: 15px;
+  margin-right: 10px;
+}
+
+.contacts {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+}
+
+.contacts span {
+  color: #707070;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.contacts span:first-child {
+  color: #000000;
+  font-family: "Segoe UI";
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.contacts span:first-child::before {
+  content: "";
+  display: inline-block;
+  background-image: url("../img/contacts-icon.svg");
+  background-repeat: no-repeat;
+  width: 16px;
+  height: 16px;
+  margin-right: 10px;
+}
+
+.header-background-menu {
+  background-color: #0ebc00;
+}
+
+.header-menu-list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  list-style: none;
+  height: 57px;
+  padding: 0;
+  margin: 0;
+}
+
+.header-menu-list li {
+  margin-right: 30px;
+}
+
+.header-menu-list li a {
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 700;
+}
+
+.header-background-image {
+  background-image: url("../img/header-background-image.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  width: auto;
+  height: 569px;
+}
+
+.header-info-text h1 {
+  width: 385px;
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 38px;
+  font-weight: 700;
+  padding-top: 189px;
+  margin: 0;
+  padding-bottom: 68px;
+}
+
+.header-info-text a {
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 50px;
+  background-color: #363636;
+  padding: 17px 99px;
+  text-decoration: none;
+}
+
+.why-us {
+  padding-top: 37px;
+  padding-bottom: 70px;
+}
+
+.why-us h2 {
+  color: #030303;
+  font-family: "Segoe UI";
+  font-size: 38px;
+  font-weight: 700;
+  padding-bottom: 49px;
+  margin: 0;
+}
+
+.why-us-features {
+  padding-bottom: 92px;
+}
+
+.why-us-features-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.why-us-features-item img {
+  padding-bottom: 32px;
+}
+
+.why-us-features-item h3 {
+  width: 296px;
+  margin: 0;
+  padding-bottom: 15px;
+  text-align: center;
+}
+
+.why-us-features-item p {
+  width: 296px;
+  margin: 0;
+  text-align: center;
+}
+
+.why-us-product-item-wrapper {
+  width: 300px;
+  background-color: #f7f7f7;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.why-us-product-item-wrapper::before {
+  content: "";
+  border: 1px solid #ffffff;
+  position: absolute;
+  width: 280px;
+  height: 80px;
+  top: 10px;
+  left: 10px;
+}
+
+.why-us-product-item-wrapper span {
+  color: #2f2f2f;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 700;
+  padding-left: 9px;
+}
+
+.why-us-product-item-text-wrapper {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.why-us-product-item-text-wrapper span:last-child {
+  color: #2f2f2f;
+  font-family: "Segoe UI";
+  font-size: 12px;
+  font-weight: 400;
+}
+
+.why-us-info {
+  padding-bottom: 70px;
+}
+
+.why-us-info h3 {
+  color: #2f2f2f;
+  font-family: "Segoe UI";
+  font-size: 24px;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.why-us-info ul {
+  list-style: none;
+  margin: 0 0 20px 0;
+  padding: 0;
+}
+
+.why-us-info ul li {
+  color: #00d921;
+}
+
+.why-us-info p {
+  color: #2f2f2f;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+  margin-bottom: 20px;
+}
+
+.calculate-the-cost-background {
+  background-color: #4b9441;
+  height: 665px;
+}
+
+.calculate-the-cost {
+  padding-top: 43px;
+  padding-bottom: 46px;
+}
+
+.calculate-the-cost h2 {
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.window-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.devider-vertical {
+  width: 2px;
+  height: 545px;
+  border: 1px solid #707070;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.right-side-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.right-side-form input[type="number"],
+.right-side-form input[type="text"] {
+  width: 371px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: rgba(0, 0, 0, 0.4);
+  border: none;
+  padding-left: 21px;
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.right-side-form button {
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 700;
+  width: 371px;
+  height: 50px;
+  border-radius: 4px;
+  background-color: #00d921;
+  border: none;
+}
+/*# sourceMappingURL=styles.css.map */
