--- a/css/styles.css
+++ b/css/styles.css
@@ -390,4 +390,125 @@
   background-color: #00d921;
   border: none;
 }
+
+.another-production {
+  padding-top: 46px;
+}
+
+.another-production h2 {
+  padding-bottom: 40px;
+}
+
+.another-production-item {
+  width: 400px;
+  height: 310px;
+  background-color: #f5f5f5;
+  margin-bottom: 30px;
+}
+
+.another-production-item img {
+  padding-bottom: 15px;
+}
+
+.another-production-item span {
+  padding-left: 20px;
+  color: #000000;
+  font-family: "Segoe UI";
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.our-partners h2 {
+  color: #434343;
+  font-family: "Segoe UI";
+  font-size: 28px;
+  font-weight: 700;
+  padding-top: 24px;
+  margin: 0;
+}
+
+.our-partners p {
+  color: #434343;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+  padding-bottom: 44px;
+  margin: 0;
+}
+
+.we-are-proud h2 {
+  margin: 0;
+  color: #000000;
+  font-family: "Segoe UI";
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.we-are-proud p {
+  padding-bottom: 28px;
+  margin: 0;
+  color: #434343;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 400;
+}
+
+.we-are-proud a {
+  margin-top: 85px;
+  margin-bottom: 68px;
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 700;
+  border-radius: 4px;
+  background-color: #00d921;
+  padding: 16px 81px;
+  display: inline-block;
+  margin-right: 50px;
+}
+
+.we-are-proud a:last-child {
+  background-color: #363636;
+  margin: 0;
+}
+
+.we-are-proud-item {
+  margin-bottom: 20px;
+}
+
+.windows-company {
+  padding-bottom: 70px;
+}
+
+.windows-company-info {
+  height: 268px;
+  background-color: #4b9441;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 29px;
+}
+
+.windows-company-info-item span {
+  display: block;
+  text-align: center;
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-weight: 700;
+  font-size: 58px;
+}
+
+.windows-company-info-item p {
+  margin: 0;
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 18px;
+  font-weight: 700;
+  text-align: center;
+}
 /*# sourceMappingURL=styles.css.map */
