--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -708,6 +708,17 @@
       font-weight: 700;
     }
   }
+
+  a {
+    color: #ffffff;
+    font-family: "Segoe UI";
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 4px;
+    background-color: #00d921;
+    padding: 16px 81px;
+    display: inline-block;
+  }
 }
 
 .windows-text {
@@ -720,4 +731,39 @@
 
 .our-works {
   padding-top: 24px;
+}
+
+.contacts-text {
+  p {
+    margin: 0;
+  }
+}
+
+.contacts-text-schedule {
+  padding-top: 20px;
+}
+
+.contacts-text-contacts {
+  padding-bottom: 20px;
+
+  a {
+    color: #000000;
+  }
+}
+
+.contacts-text-email {
+  a {
+    color: #000000;
+  }
+}
+
+.contacts {
+  padding-top: 24px;
+  padding-bottom: 50px;
+
+  h2 {
+    margin: 0;
+    margin-right: auto;
+    padding-bottom: 50px;
+  }
 }
