--- a/css/styles.css
+++ b/css/styles.css
@@ -830,4 +830,67 @@
   margin-right: auto;
   padding-bottom: 50px;
 }
+
+.contacts-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.contacts-wrapper label input {
+  width: 268px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #ebebeb;
+  color: #696969;
+  font-family: "Segoe UI";
+  font-size: 12px;
+  font-weight: 400;
+  border: none;
+  padding-left: 15px;
+}
+
+.send-button {
+  width: 100%;
+  color: #ffffff;
+  font-family: "Segoe UI";
+  font-size: 14px;
+  font-weight: 700;
+  width: 268px;
+  height: 40px;
+  border-radius: 4px;
+  background-color: #ff0031;
+  border: none;
+}
+
+.modal-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal-body p {
+  width: 268px;
+}
+
+.modal-dialog {
+  width: 322px;
+  height: 347px;
+}
+
+.modal-header {
+  padding-bottom: 0;
+  border-bottom: 0;
+}
 /*# sourceMappingURL=styles.css.map */
