--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -767,3 +767,54 @@
     padding-bottom: 50px;
   }
 }
+
+.contacts-wrapper {
+  display: flex;
+  flex-direction: column;
+  label {
+    input {
+      width: 268px;
+      height: 40px;
+      border-radius: 4px;
+      background-color: #ebebeb;
+      color: #696969;
+font-family: "Segoe UI";
+font-size: 12px;
+font-weight: 400;
+border: none;
+padding-left: 15px;
+    }
+  }
+}
+
+.send-button {
+  width: 100%;
+  color: #ffffff;
+font-family: "Segoe UI";
+font-size: 14px;
+font-weight: 700;
+width: 268px;
+height: 40px;
+border-radius: 4px;
+background-color: #ff0031;
+border: none;
+}
+
+.modal-body {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  p {
+    width: 268px;
+  }
+}
+
+.modal-dialog {
+  width: 322px;
+  height: 347px;
+}
+
+.modal-header {
+  padding-bottom: 0;
+  border-bottom: 0;
+}
