--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -906,3 +906,17 @@
     }
   }
 }
+
+@media (max-width: 1366px) {
+  .why-us-product-item {
+    margin-bottom: 20px;
+  }
+}
+
+@media (max-width: 992px) {}
+
+@media (max-width: 768px) {}
+
+@media (max-width: 576px) {}
+
+@media (min-width: 1px) and (max-width: 320px) {}
