--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -913,7 +913,27 @@
   }
 }
 
-@media (max-width: 992px) {}
+@media (max-width: 992px) {
+  .header-menu-list {
+    li {
+      a {
+        font-size: 11px;
+      }
+    }
+  }
+
+  .schedule-wrapper {
+    display: none;
+  }
+
+  .address-wrapper {
+    margin-left: auto;
+  }
+
+  .header-background-image {
+    height: 500px;
+  }
+}
 
 @media (max-width: 768px) {}
 
