--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -980,14 +980,17 @@
       font-size: 14px;
     }
   }
+
   .plastic-windows-image {
     display: flex;
     justify-content: center;
     margin-bottom: 30px;
+
     img {
       width: 100%;
     }
   }
+
   .contacts-text {
     margin-bottom: 30px;
   }
@@ -999,8 +1002,106 @@
   }
 }
 
-@media (max-width: 768px) {}
+@media (max-width: 768px) {
+  .header-info-text {
+    h1 {
+      margin: 0 auto;
+      text-align: center;
+      padding-top: 150px;
+    }
+  }
 
-@media (max-width: 576px) {}
+  .contacts-wrapper {
+    margin-left: auto;
+  }
+
+  .schedule-wrapper,
+  .address-wrapper {
+    display: none;
+  }
+
+  .header-info-text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .header-menu-list {
+    display: none;
+  }
+
+  .why-us-product-item-wrapper {
+    margin: 0 auto;
+  }
+
+  .another-production-item {
+    margin: 0 auto 30px auto;
+  }
+
+  .we-are-proud-item {
+    text-align: center;
+  }
+
+  .windows-company {
+    padding-top: 30px;
+  }
+
+  .windows-company-info {
+    flex-direction: column;
+    padding: 20px 0;
+    height: 300px;
+  }
+
+  .windows-company-info-item {
+    margin-bottom: 10px;
+  }
+
+  .footer-address {
+    display: none;
+  }
+
+  .footer {
+    height: 200px;
+  }
+
+  .another-production-item {
+    width: 100%;
+    height: 380px;
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .we-are-proud-item {
+    img {
+      width: 100%;
+    }
+  }
+
+  .we-are-proud {
+    a {
+      width: 100%;
+      display: block;
+      padding: 30px;
+      font-size: 18px;
+    }
+  }
+}
+
+@media (max-width: 576px) {
+  .header-info-text {
+    h1 {
+      width: 270px;
+      font-size: 30px;
+    }
+
+    a {
+      font-size: 18px;
+      padding: 10px 75px;
+      text-align: center;
+    }
+  }
+}
 
 @media (min-width: 1px) and (max-width: 320px) {}
