--- a/css/styles.css
+++ b/css/styles.css
@@ -487,6 +487,7 @@ body {
 
 .another-production h2 {
   padding-bottom: 40px;
+  font-weight: 700;
 }
 
 .another-production-item {
@@ -509,7 +510,7 @@ body {
 }
 
 .our-partners h2 {
-  color: #434343;
+  color: #000000;
   font-family: "Segoe UI";
   font-size: 28px;
   font-weight: 700;
@@ -568,6 +569,10 @@ body {
 
 .windows-company {
   padding-bottom: 70px;
+}
+
+.windows-company h2 {
+  font-weight: 700;
 }
 
 .windows-company-info {
@@ -850,6 +855,7 @@ body {
 .plastic-windows h2 {
   padding-bottom: 50px;
   margin: 0;
+  font-weight: 700;
 }
 
 .plastic-windows ul {
@@ -880,6 +886,10 @@ body {
 
 .plastic-windows-text {
   padding-bottom: 50px;
+}
+
+.plastic-windows-text h3 {
+  font-weight: 700;
 }
 
 .plastic-windows-text p {
